--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,18 +1,13 @@
-PROJ_NAME = Rock_Paper_Scissors
-TEST_PROJ_NAME = Test_$(PROJ_NAME)
 
-BUILD_DIR = Build
-
-SRC = src/main.c
+PROJ_NAME = RockPaperScissors
+SRC= src/main.c\
+src/project.c\
 
 
-TEST_SRC = test.c\
+TEST_SRC=src/project.c\
+src/Test_project.c\
 unity/unity.c
 
-INC = -Iinc\
--Iunity
-
-#To check if the OS is Windows or Linux and set the executable file extension and delete command accordingly
 ifdef OS
    RM = del /q
    FixPath = $(subst /,\,$1)
@@ -25,31 +20,32 @@ else
    endif
 endif
 
-# Makefile will not run target command if the name with file already exists. To override, use .PHONY
-.PHONY : all test coverage run clean doc
+ 
+INC=-IInclude\
+-Iunity\
 
-all:$(BUILD_DIR)
-	gcc main.c $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
+Build : $(SRC) 
+	gcc $(SRC) $(INC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
-run: all
-	$(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
 
-test: $(SRC) $(TEST_SRC)
-	gcc $^ $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
-	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
+build_test : 
+	gcc $(TEST_SRC) $(INC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
-coverage:${PROJECT_NAME}
-	gcc -fprofile-arcs -ftest-coverage $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
-	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
-	gcov -a $(SRC)
+run : Build
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
-doc:
-	make -C doc
-$(BUILD_DIR):
-	mkdir $(BUILD_DIR)
+run_test : build_test
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
-clean:
-	$(RM) $(call FixPath,$(BUILD_DIR)/*)
-	make clean -C doc
-	rmdir $(BUILD_DIR) doc/html
+staticcheck : 
+	cppcheck --enable=all -iunity .
 
+dynamic_analysis : Build
+	valgrind ./$(call FixPath,$(PROJ_NAME).$(EXEC))
+	
+coverage:
+	gcc -fprofile-arcs -ftest-coverage $(SRC) $(INC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
+	gcov -a ./$(call FixPath,$(PROJ_NAME).$(EXEC))
+
+Clean:
+	$(RM) $(call FixPath,*.out)
